--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       - image: elonmoon/tpay
 
-    working_directory: /srv/tpay
+    working_directory: ~/repo
 
     steps:
       - checkout
