[CIRCLE-CI]working_directory 위치 수정

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       - image: elonmoon/tpay
 
-    working_directory: ~/repo
+    working_directory: /srv/tpay/app
 
     steps:
       - checkout
