--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - checkout
 
+      at: /srv/tpay/app
+
       - run:
           name: install dependencies
           command: pip3 install -r requirements.txt
