[CIRCLE-CI]config.yml attach_workspace 수정

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - checkout
 
-      at: /srv/tpay/app
+      - attach_workspace: /srv/tpay/app
 
       - run:
           name: install dependencies
