--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,4 @@ jobs:
           command: pip3 install -r requirements.txt
       - run:
           name: run tests
-          command: python3 app/manage.py test
+          command: coverage run app/manage.py test codecov
