--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,6 @@ jobs:
           command: pip3 install -r requirements.txt
       - run:
           name: run tests
+          environment:
+            CODECOV_TOKEN: 9253568e-3614-467e-a0ad-031f0265ea06
           command: coverage run app/manage.py test codecov
